# blackglass-variance-core

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKTEST_WORKFLOW.md  BOOTSTRAP.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDENTITY.md  MEMORY.md  README.md  SECURITY.md  SOUL.md  USER.md  VARIANCE_REPORT.md  WALKTHROUGH.md  agent_memory.json  check_balance.py  check_factory.py  check_sb_factory.py  config.json  constitution.py  dashboard.py  debug_cex.py  debug_v2.py  demo_interdiction.py  dict.txt  drift_audit_157.patch  executor.py  find_liquidity.py  last_architect_interaction.json  logic_gasket_cli.py  mev_direct_extraction.py  oracle_hunter.py  pyproject.toml  radiance_server.py  ratify_proposal.py  requirements.txt  review_console.py  (+10 more)
.context/: blackglass_ops.md  incident_memory.md
corporate/: CAPABILITY_STATEMENT_DEFENSE.md  CAPABILITY_STATEMENT_FEDERAL.html  CAPABILITY_STATEMENT_FEDERAL.md  CASE_STUDY_001_SHARD_DELTA.md  CASE_STUDY_002_ARTICUL8.md  NIST_800_171_SSP.html  NIST_800_171_SSP.md  OFFENSIVE_TARGETS.md  VINDICATION_PROTOCOL.md  fpds_ready.json
docs/: ADOPTION_ASSETS.md  CASE_STUDY_OPENBB.html  CASE_STUDY_OPENBB.md  FORENSIC_AUDIT_2026_Q1.md  HN_MANIFESTO.md  NIST_RMF_SUBMISSION.md  OUTPUT_CONTRACTS.md  SECTOR_ANALYSIS_Q1.md  STRATEGY_DOMINANCE_2026.md  TECHNICAL_BRIEF.md  WHITE_PAPER_PHYSICS_OF_FAILURE.md
memory/: 2026-02-15.md
modules/: __init__.py  auditor_core.py  council_bridge.py  dashboard.py  executor.py  genesis_clone.py  judicial_modules.py  learner.py  logic_gasket.py  oracle_hunter.py  oracle_hunter_scan_all.txt  (+3 more)
(+48 files in other folders)
